--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,15 @@
 {
-  "name": "S3 Detector",
-  "version": "1.0",
-  "manifest_version": 2,
-  "description": "The first extension that I made.",
+  "name": "Security Squatting Scanner",
+  "description": "Security scanner to search for unregistered domains and S3 buckets",
+  "version": "0.1",
+  "icons": {"128": "icon.png"},
+  "permissions": ["<all_urls>", "webRequest", "notifications", "storage"],
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
-    "permissions": ["webRequest", "webRequestBlocking",
-                  "*://*/*"],
-"background": {
-"scripts": [
-"background.js"
-],
-"persistent": false
-}
+  "background": {
+    "scripts": ["background.js"]
+  },
+  "manifest_version": 2
 }
